_15rpys7s & tab__on-btn-container -> btn-link-condensed

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -315,7 +315,7 @@
                                         <div class="dir dir-ltr">
                                           <button
                                             type="button"
-                                            class="tab__on-btn-container"
+                                            class="btn-link-condensed"
                                           >
                                             Turn on notifications
                                           </button>
@@ -386,7 +386,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -406,7 +406,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -426,7 +426,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -446,7 +446,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -484,7 +484,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -504,7 +504,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -543,7 +543,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -563,7 +563,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -602,7 +602,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -622,7 +622,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -642,7 +642,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -726,7 +726,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -746,7 +746,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -766,7 +766,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -786,7 +786,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -825,7 +825,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -863,7 +863,7 @@
                                               <div class="tab__on-btn-wrapper">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Edit
                                                 </button>
@@ -1182,7 +1182,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1202,7 +1202,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1223,7 +1223,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1243,7 +1243,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1281,7 +1281,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1301,7 +1301,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1340,7 +1340,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1360,7 +1360,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1399,7 +1399,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1419,7 +1419,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1439,7 +1439,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1523,7 +1523,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1543,7 +1543,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1563,7 +1563,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1583,7 +1583,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1622,7 +1622,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
@@ -1661,7 +1661,7 @@
                                                   <div class="tab__on-btn-wrapper">
                                                     <button
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Edit
                                                     </button>
