--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -538,7 +538,7 @@
                                         <!-- -->20
                                         <!-- -->% discount for your first 3
                                         guests to help you get booked faster.
-                                        <button type="button" class="tab__on-btn-container">
+                                        <button type="button" class="btn-link-condensed">
                                           Learn more
                                         </button>
                                       </div>
