--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -5009,7 +5009,7 @@
                       <div class="button__mt-24">
                         <div class="main-content__details-button-wrapper">
                           <div class="main-content__details-cancel-button-wrapper">
-                            <button type="button" class="tab__on-btn-container">
+                            <button type="button" class="btn-link-condensed">
                               Cancel
                             </button>
                           </div>
