--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3407,7 +3407,7 @@
                                   time zones, and these times are in high
                                   demand.</span
                                 ><span class="calendar-sideba__sched-insight-show-mote">
-                                  <button type="button" class="tab__on-btn-container">
+                                  <button type="button" class="btn-link-condensed">
                                     Show data
                                   </button></span
                                 >
