--- a/edit/bring.html
+++ b/edit/bring.html
@@ -835,7 +835,7 @@
                                               aria-label="Add another item to: What guests need to bring"
                                               data-testid="add-packing-list-item-link"
                                               type="button"
-                                              class="tab__on-btn-container"
+                                              class="btn-link-condensed"
                                             >
                                               Add another item
                                             </button>
