--- a/edit/title.html
+++ b/edit/title.html
@@ -451,7 +451,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                                           <div class="_63wpx2">
                                             <button
                                               type="button"
-                                              class="tab__on-btn-container"
+                                              class="btn-link-condensed"
                                             >
                                               Show examples
                                             </button>
