--- a/edit/what.html
+++ b/edit/what.html
@@ -458,7 +458,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                           <div class="_63wpx2">
                                             <button
                                               type="button"
-                                              class="tab__on-btn-container"
+                                              class="btn-link-condensed"
                                             >
                                               Show examples
                                             </button>
