--- a/places.html
+++ b/places.html
@@ -405,7 +405,7 @@
                                         ><span aria-hidden="true"> · </span
                                         ><button
                                           type="button"
-                                          class="tab__on-btn-container"
+                                          class="btn-link-condensed"
                                         >
                                           Explore nearby experiences
                                         </button>
