--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -618,7 +618,7 @@
                                                           Airbnb.
                                                           <button
                                                             type="button"
-                                                            class="tab__on-btn-container"
+                                                            class="btn-link-condensed"
                                                           >
                                                             Learn more
                                                           </button>
@@ -1275,7 +1275,7 @@
                                                   happening on Airbnb.
                                                   <button
                                                     type="button"
-                                                    class="tab__on-btn-container"
+                                                    class="btn-link-condensed"
                                                   >
                                                     Learn more
                                                   </button>
