--- a/products.html
+++ b/products.html
@@ -1942,7 +1942,7 @@
                                                   <button
                                                     aria-label="Learn more"
                                                     type="button"
-                                                    class="tab__on-btn-container"
+                                                    class="btn-link-condensed"
                                                   >
                                                     Learn more
                                                   </button>
@@ -2965,7 +2965,7 @@
                                                     <button
                                                       data-testid="location-modal-button"
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       <span
                                                         class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -6011,7 +6011,7 @@
                                                                 role="button"
                                                                 aria-describedby="review_675691390681590266_title"
                                                                 type="button"
-                                                                class="tab__on-btn-container"
+                                                                class="btn-link-condensed"
                                                               >
                                                                 <span
                                                                   class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -6199,7 +6199,7 @@
                                                                 role="button"
                                                                 aria-describedby="review_652537737999961308_title"
                                                                 type="button"
-                                                                class="tab__on-btn-container"
+                                                                class="btn-link-condensed"
                                                               >
                                                                 <span
                                                                   class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -9804,7 +9804,7 @@
                                                     <button
                                                       aria-label="Learn more"
                                                       type="button"
-                                                      class="tab__on-btn-container"
+                                                      class="btn-link-condensed"
                                                     >
                                                       Learn more
                                                     </button>
@@ -18905,7 +18905,7 @@
                                                               role="button"
                                                               aria-describedby="review_675691390681590266_title"
                                                               type="button"
-                                                              class="tab__on-btn-container"
+                                                              class="btn-link-condensed"
                                                             >
                                                               <span
                                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -19091,7 +19091,7 @@
                                                               role="button"
                                                               aria-describedby="review_652537737999961308_title"
                                                               type="button"
-                                                              class="tab__on-btn-container"
+                                                              class="btn-link-condensed"
                                                             >
                                                               <span
                                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -19275,7 +19275,7 @@
                                                               role="button"
                                                               aria-describedby="review_599646423789115671_title"
                                                               type="button"
-                                                              class="tab__on-btn-container"
+                                                              class="btn-link-condensed"
                                                             >
                                                               <span
                                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -19475,7 +19475,7 @@
                                                               role="button"
                                                               aria-describedby="review_595306787895788222_title"
                                                               type="button"
-                                                              class="tab__on-btn-container"
+                                                              class="btn-link-condensed"
                                                             >
                                                               <span
                                                                 class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -19760,7 +19760,7 @@
                                                   <button
                                                     data-testid="location-modal-button"
                                                     type="button"
-                                                    class="tab__on-btn-container"
+                                                    class="btn-link-condensed"
                                                   >
                                                     <span
                                                       class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
@@ -20672,7 +20672,7 @@
                                                         >
                                                           <button
                                                             type="button"
-                                                            class="tab__on-btn-container"
+                                                            class="btn-link-condensed"
                                                           >
                                                             <span
                                                               class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
