--- a/reviews.html
+++ b/reviews.html
@@ -78,7 +78,7 @@
                               >
                             </div>
                           </div>
-                          <button type="button" class="tab__on-btn-container">
+                          <button type="button" class="btn-link-condensed">
                             Save and exit
                           </button>
                         </div>
@@ -1353,7 +1353,7 @@
                             <div class="_zmebr8n">
                               <div class="_1g0w9mx">
                                 <div class="_13ea8wp hidden">
-                                  <button type="button" class="tab__on-btn-container">
+                                  <button type="button" class="btn-link-condensed">
                                     <span>Back</span>
                                   </button>
                                 </div>
