--- a/signup_login.html
+++ b/signup_login.html
@@ -2039,7 +2039,7 @@
                                   </div>
                                   <p class="_4ivcik">
                                     <span>Didn't get a code? </span
-                                    ><button type="button" class="tab__on-btn-container more-options">
+                                    ><button type="button" class="btn-link-condensed more-options">
                                       More options
                                     </button>
                                   </p>
@@ -2907,7 +2907,7 @@
                                               <div class="_slm4k1">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Show
                                                 </button>
@@ -2951,7 +2951,7 @@
                                               <div class="_slm4k1">
                                                 <button
                                                   type="button"
-                                                  class="tab__on-btn-container"
+                                                  class="btn-link-condensed"
                                                 >
                                                   Show
                                                 </button>
@@ -5300,7 +5300,7 @@
                                 </div>
                                 <p class="_4ivcik">
                                   <span>Didn't get a code? </span
-                                  ><button type="button" class="tab__on-btn-container more-options">
+                                  ><button type="button" class="btn-link-condensed more-options">
                                     More options
                                   </button>
                                 </p>
@@ -5516,7 +5516,7 @@
                                           </div>
                                         </label>
                                         <div class="_129y4gf">
-                                          <div class="_slm4k1"><button type="button" class="_15rpys7s">Show</button>
+                                          <div class="_slm4k1"><button type="button" class="btn-link-condensed">Show</button>
                                           </div>
                                         </div>
                                       </div>
@@ -5537,7 +5537,7 @@
                                           </div>
                                         </label>
                                         <div class="_129y4gf">
-                                          <div class="_slm4k1"><button type="button" class="_15rpys7s">Show</button>
+                                          <div class="_slm4k1"><button type="button" class="btn-link-condensed">Show</button>
                                           </div>
                                         </div>
                                       </div>
@@ -6281,7 +6281,7 @@
                                             <div class="_slm4k1">
                                               <button
                                                 type="button"
-                                                class="tab__on-btn-container"
+                                                class="btn-link-condensed"
                                               >
                                                 Show
                                               </button>
@@ -6325,7 +6325,7 @@
                                             <div class="_slm4k1">
                                               <button
                                                 type="button"
-                                                class="tab__on-btn-container"
+                                                class="btn-link-condensed"
                                               >
                                                 Show
                                               </button>
