--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1121,7 +1121,7 @@
                                     ></path>
                                   </svg>
                                   <span class="_1lhojeb"
-                                    ><button type="button" class="tab__on-btn-container">
+                                    ><button type="button" class="btn-link-condensed">
                                       Use my current location
                                     </button></span
                                   >
@@ -1194,7 +1194,7 @@
                                   <button
                                     data-testid="add-languages"
                                     type="button"
-                                    class="tab__on-btn-container"
+                                    class="btn-link-condensed"
                                     data-bs-toggle="modal"
                                     data-bs-target="#modalAdditional"
                                   >
