--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1119,7 +1119,7 @@
                                 <div class="_4cey3ty">
                                   <button
                                     type="button"
-                                    class="tab__on-btn-container"
+                                    class="btn-link-condensed"
                                     data-bs-toggle="modal"
                                     data-bs-target="#exampleModal"
                                   >
