--- a/submission/title.html
+++ b/submission/title.html
@@ -1100,7 +1100,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                                   >
                                 </div>
                                 <div class="_63wpx2">
-                                  <button type="button" class="tab__on-btn-container">
+                                  <button type="button" class="btn-link-condensed">
                                     Show examples
                                   </button>
                                 </div>
