--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1107,7 +1107,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   >
                                 </div>
                                 <div class="_63wpx2">
-                                  <button type="button" class="tab__on-btn-container">
+                                  <button type="button" class="btn-link-condensed">
                                     Show examples
                                   </button>
                                 </div>
