--- a/welcome_back.html
+++ b/welcome_back.html
@@ -368,7 +368,7 @@
                                           <div class="_slm4k1">
                                             <button
                                               type="button"
-                                              class="tab__on-btn-container"
+                                              class="btn-link-condensed"
                                             >
                                               Show
                                             </button>
