--- a/basics.html
+++ b/basics.html
@@ -702,7 +702,7 @@
                                     ></path>
                                   </svg>
                                   <span class="_1lhojeb"
-                                    ><button type="button" class="tab__on-btn-container">
+                                    ><button type="button" class="btn-link-condensed">
                                       Use my current location
                                     </button></span
                                   >
@@ -775,7 +775,7 @@
                                   <button
                                     data-testid="add-languages"
                                     type="button"
-                                    class="tab__on-btn-container"
+                                    class="btn-link-condensed"
                                     data-bs-toggle="modal"
                                     data-bs-target="#modalAdditional"
                                   >
