--- a/covidsafety.html
+++ b/covidsafety.html
@@ -201,7 +201,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="tab__on-btn-container"
+                                            class="btn-link-condensed"
                                           >
                                             <div class="landing-page__card-btn">
                                               Learn more
@@ -281,7 +281,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="tab__on-btn-container"
+                                            class="btn-link-condensed"
                                           >
                                             <div class="landing-page__card-btn">
                                               Learn more
@@ -381,7 +381,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="tab__on-btn-container"
+                                            class="btn-link-condensed"
                                           >
                                             <div class="landing-page__card-btn">
                                               Learn more
@@ -462,7 +462,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="tab__on-btn-container"
+                                            class="btn-link-condensed"
                                           >
                                             <div class="landing-page__card-btn">
                                               Learn more
