--- a/payment.html
+++ b/payment.html
@@ -318,7 +318,7 @@
                                                         data-testid="checkout_platform.DATE_PICKER.edit"
                                                         aria-label="Edit dates"
                                                         type="button"
-                                                        class="tab__on-btn-container"
+                                                        class="btn-link-condensed"
                                                       >
                                                         Edit
                                                       </button>
@@ -363,7 +363,7 @@
                                                         data-testid="checkout_platform.GUEST_PICKER.edit"
                                                         aria-label="Edit Guests"
                                                         type="button"
-                                                        class="tab__on-btn-container"
+                                                        class="btn-link-condensed"
                                                       >
                                                         Edit
                                                       </button>
@@ -497,7 +497,7 @@
                                                             <button
                                                               aria-label="Learn more about Pay Less Up Front"
                                                               type="button"
-                                                              class="tab__on-btn-container"
+                                                              class="btn-link-condensed"
                                                             >
                                                               More info
                                                             </button>
@@ -817,7 +817,7 @@
                                                 <div class="main-content__details-cancel-button-wrapper">
                                                   <button
                                                     type="button"
-                                                    class="tab__on-btn-container"
+                                                    class="btn-link-condensed"
                                                   >
                                                     Enter a coupon
                                                   </button>
@@ -875,7 +875,7 @@
                                                     > </span
                                                   ><button
                                                     type="button"
-                                                    class="tab__on-btn-container"
+                                                    class="btn-link-condensed"
                                                   >
                                                     Learn more
                                                   </button>
@@ -1345,7 +1345,7 @@
                                                             id="MowebCurrencyPicker_trigger"
                                                             aria-label="Current currency: (PHP). Change payment currency"
                                                             type="button"
-                                                            class="tab__on-btn-container"
+                                                            class="btn-link-condensed"
                                                           >
                                                             (PHP)
                                                           </button>
