--- a/profile.html
+++ b/profile.html
@@ -580,7 +580,7 @@
 
                                           <button
                                             type="button"
-                                            class="tab__on-btn-container"
+                                            class="btn-link-condensed"
                                           >
                                             Learn more
                                           </button>
@@ -656,7 +656,7 @@
                                           <div class="_14h4uoc">
                                             <button
                                               type="button"
-                                              class="tab__on-btn-container"
+                                              class="btn-link-condensed"
                                               data-veloute="user_profile_edit_button"
                                             >
                                               Edit profile</button
@@ -982,7 +982,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             <div>
                                               <button
                                                 type="button"
-                                                class="tab__on-btn-container"
+                                                class="btn-link-condensed"
                                               >
                                                 Add more
                                               </button>
@@ -1120,7 +1120,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
 
                                               <button
                                                 type="button"
-                                                class="tab__on-btn-container"
+                                                class="btn-link-condensed"
                                               >
                                                 Learn more
                                               </button>
@@ -1454,7 +1454,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         <div>
                                           <button
                                             type="button"
-                                            class="tab__on-btn-container"
+                                            class="btn-link-condensed"
                                           >
                                             Report this profile
                                           </button>
@@ -1677,7 +1677,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </div>
                                       </div>
                                     </div>
-                                    <button type="button" class="tab__on-btn-container">
+                                    <button type="button" class="btn-link-condensed">
                                       Learn more
                                     </button>
                                     about how confirming account info helps keep
@@ -1750,7 +1750,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     <div class="_14h4uoc">
                                       <button
                                         type="button"
-                                        class="tab__on-btn-container"
+                                        class="btn-link-condensed"
                                         data-veloute="user_profile_edit_button"
                                       >
                                         Edit profile</button
@@ -2069,7 +2069,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </div>
                                       </div>
                                       <div>
-                                        <button type="button" class="tab__on-btn-container">
+                                        <button type="button" class="btn-link-condensed">
                                           Add more
                                         </button>
                                       </div>
@@ -2200,7 +2200,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             </div>
                                           </div>
                                         </div>
-                                        <button type="button" class="tab__on-btn-container">
+                                        <button type="button" class="btn-link-condensed">
                                           Learn more
                                         </button>
                                         about how confirming account info helps
@@ -2555,7 +2555,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     <div class="_1k2miji"></div>
                                   </div>
                                   <div>
-                                    <button type="button" class="tab__on-btn-container">
+                                    <button type="button" class="btn-link-condensed">
                                       Report this profile
                                     </button>
                                   </div>
