--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -90,7 +90,7 @@
                               d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
                             ></path>
                           </g></svg></span></span
-                    ><button type="button" class="tab__on-btn-container">
+                    ><button type="button" class="btn-link-condensed">
                       Add details
                     </button>
                   </li>
